// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurricModalErrorContent should render additional when supplied 1`] = `
<div>
  <div
    class="sc-bdvwhi sc-gsDMPd mwaQc cNirtN"
  >
    <h1
      class="sc-bkkgYE sc-fbfc102a-0 dYVGcc bCFzsR"
    >
      404
    </h1>
    <h2
      class="sc-bkkgYE hDGBsv"
    >
      Missing!
    </h2>
    <p
      class="sc-hGPAwl lcuFqC"
    >
      Close this modal
    </p>
  </div>
</div>
`;

exports[`CurricModalErrorContent should render correctly 1`] = `
<div>
  <div
    class="sc-bdvwhi sc-gsDMPd mwaQc cNirtN"
  >
    <h1
      class="sc-bkkgYE sc-fbfc102a-0 dYVGcc bCFzsR"
    >
      404
    </h1>
    <h2
      class="sc-bkkgYE hDGBsv"
    >
      Missing!
    </h2>
  </div>
</div>
`;
